tests/vertical-slice/reject/match_destructure_wildcard_owned_aggregate.hew
//! Reject: match-destructure wildcard on an owned-aggregate field
//! (`Inner` is a record that owns `string`). The partial-extraction
//! emitter routes inline `Instr::Drop` through `project_field_inline_drop_
//! symbol`, which deliberately returns `None` for owned record / tuple /
//! enum field types — their drops are `DropKind::RecordInPlace` /
//! `TupleInPlace` / `EnumInPlace`, function-scope drop kinds the inline
//! dispatcher cannot emit. Rather than emit a wrong-ABI free or leak the
//! field, the pre-flight check fails closed at MIR construction time.
//!
//! Binding the field explicitly (`inner: i`) routes its drop through
//! `owned_locals` and works correctly — the accept fixture
//! `match_record_destructure_owned.hew` covers that path. This fixture
//! pins the inverse: the wildcard variant must NOT silently leak.

type Inner {
    value: string,
}

type Outer {
    name: string,
    inner: Inner,
}

fn make() -> Outer {
    Outer {
        name: string_concat("name-", "x"),
        inner: Inner { value: string_concat("v-", "x") },
    }
}

fn main() -> i64 {
    let o = make();
    let _s = match o {
        Outer { name: n, inner: _ } => n,
    };
    0
}
